update note